--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,22 @@
-# ============================================================================
-# requirements.txt - Updated for compatibility
-# ============================================================================
-
+annotated-types==0.7.0
+anyio==3.7.1
+click==8.2.1
 fastapi==0.104.1
-uvicorn[standard]==0.24.0
-python-multipart==0.0.6
+greenlet==3.2.2
+h11==0.16.0
+httptools==0.6.4
+idna==3.10
 pydantic==2.5.0
-sqlalchemy==2.0.23
-alembic==1.13.1
-
-# Database drivers (choose based on your needs)
-aiosqlite==0.19.0       # For SQLite (development)
-psycopg2-binary==2.9.9  # For PostgreSQL (production)
-aiomysql==0.2.0         # For MySQL
-
-# Optional dependencies
-redis==5.0.1            # For caching
-celery==5.3.4           # For background tasks
+pydantic_core==2.14.1
+PyMySQL==1.1.1
+python-dotenv==1.1.0
+python-multipart==0.0.6
+PyYAML==6.0.2
+sniffio==1.3.1
+SQLAlchemy==2.0.41
+starlette==0.27.0
+typing_extensions==4.13.2
+uvicorn==0.24.0
+uvloop==0.21.0
+watchfiles==1.0.5
+websockets==15.0.1
