--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ httptools==0.6.4
 idna==3.10
 pydantic==2.5.0
 pydantic_core==2.14.1
+PyJWT==2.10.1
 PyMySQL==1.1.1
 python-dotenv==1.1.0
 python-multipart==0.0.6
