fix auth and file permission

--- a/local_test/pjsip.conf
+++ b/local_test/pjsip.conf
@@ -93,4 +93,36 @@ password=SuperSecret201
 type=aor
 max_contacts=2
 qualify_timeout=8
+qualify_frequency=60test
+test
+
+[222](endpoint-tpl)
+type=endpoint
+aors=222
+auth=222-auth
+outbound_auth=222-auth
+context=internal
+accountcode=203
+subscribe_context=internal
+moh_suggest=default
+notify_early_inuse_ringing=True
+refer_blind_progress=True
+direct_media=False
+force_rport=True
+rtp_symmetric=True
+rewrite_contact=True
+dtmf_mode=rfc4733
+allow=ulaw,alaw
+use_ptime=False
+
+[222-auth]
+type=auth
+auth_type=userpass
+username=203
+password=SuperSecret201
+
+[222](aor-tpl)
+type=aor
+max_contacts=2
+qualify_timeout=8
 qualify_frequency=60
