fix optimise CRUD logic

--- a/local_test/pjsip.conf
+++ b/local_test/pjsip.conf
@@ -1,5 +1,4 @@
 ;===========Auto Generated===========
-
 [201](endpoint-tpl)
 type=endpoint
 aors=201
@@ -94,7 +93,6 @@ type=aor
 max_contacts=2
 qualify_timeout=8
 qualify_frequency=60test
-test
 
 [222](endpoint-tpl)
 type=endpoint
@@ -102,27 +100,75 @@ aors=222
 auth=222-auth
 outbound_auth=222-auth
 context=internal
-accountcode=203
+accountcode=222
 subscribe_context=internal
 moh_suggest=default
 notify_early_inuse_ringing=True
 refer_blind_progress=True
-direct_media=False
+direct_media=yes
 force_rport=True
 rtp_symmetric=True
 rewrite_contact=True
 dtmf_mode=rfc4733
-allow=ulaw,alaw
+allow=ulaw,alaw,g722
 use_ptime=False
+transport=tcp
+callerid=01254661100
+max_audio_streams=200
+webrtc=yes
+ice_support=yes
 
 [222-auth]
 type=auth
 auth_type=userpass
-username=203
-password=SuperSecret201
+username=222
+password=Cs3244EG*01
+realm=UVLink123
 
 [222](aor-tpl)
 type=aor
-max_contacts=2
+max_contacts=10
 qualify_timeout=8
 qualify_frequency=60
+authenticate_qualify=no
+default_expiration=360
+minimum_expiration=120
+maximum_expiration=300
+
+[333](endpoint-tpl)
+type=endpoint
+aors=333
+auth=333-auth
+transport=udp
+outbound_auth=333-auth
+context=internal
+accountcode=333
+subscribe_context=internal
+moh_suggest=default
+notify_early_inuse_ringing=True
+refer_blind_progress=True
+direct_media=yes
+force_rport=yes
+rtp_symmetric=yes
+rewrite_contact=yes
+dtmf_mode=rfc4733
+allow=ulaw,alaw,g722
+use_ptime=False
+callerid=01254661100
+
+[333-auth]
+type=auth
+auth_type=userpass
+username=333
+password=Cs3244EG*01
+realm=UVLink
+
+[333](aor-tpl)
+type=aor
+max_contacts=5
+qualify_timeout=8
+qualify_frequency=20
+authenticate_qualify=no
+default_expiration=360
+minimum_expiration=120
+maximum_expiration=300
