--- a/local_test/pjsip.conf
+++ b/local_test/pjsip.conf
@@ -1,4 +1,3 @@
-;===========Auto Generated===========
 [201](endpoint-tpl)
 type=endpoint
 aors=201
@@ -9,27 +8,34 @@ subscribe_context=internal
 moh_suggest=default
 notify_early_inuse_ringing=True
 refer_blind_progress=True
-direct_media=False
+direct_media=yes
 force_rport=True
 rtp_symmetric=True
 rewrite_contact=True
 dtmf_mode=rfc4733
-allow=alaw,ulaw
+allow=ulaw,alaw,g722
 use_ptime=False
-transport=tcp
+transport=udp
 callerid=07717767740
+accountcode=201
+set_var=
 
 [201-auth]
 type=auth
 auth_type=userpass
 username=201
 password=Cs3244EG*01
+realm=UVLink
 
 [201](aor-tpl)
 type=aor
-max_contacts=1
+max_contacts=5
 qualify_timeout=8
-qualify_frequency=60
+qualify_frequency=20
+authenticate_qualify=no
+default_expiration=360
+minimum_expiration=120
+maximum_expiration=300
 
 [202](endpoint-tpl)
 type=endpoint
@@ -41,27 +47,34 @@ subscribe_context=internal
 moh_suggest=default
 notify_early_inuse_ringing=True
 refer_blind_progress=True
-direct_media=False
+direct_media=yes
 force_rport=True
 rtp_symmetric=True
 rewrite_contact=True
 dtmf_mode=rfc4733
-allow=alaw,ulaw
+allow=ulaw,alaw,g722
 use_ptime=False
 transport=tcp
 callerid=07717767740
+accountcode=202
+set_var=
 
 [202-auth]
 type=auth
 auth_type=userpass
 username=202
 password=Cs3244EG*01
+realm=UVLink
 
 [202](aor-tpl)
 type=aor
-max_contacts=1
+max_contacts=5
 qualify_timeout=8
-qualify_frequency=60
+qualify_frequency=20
+authenticate_qualify=no
+default_expiration=360
+minimum_expiration=120
+maximum_expiration=300
 
 [203](endpoint-tpl)
 type=endpoint
@@ -130,44 +143,6 @@ type=aor
 max_contacts=10
 qualify_timeout=8
 qualify_frequency=60
-authenticate_qualify=no
-default_expiration=360
-minimum_expiration=120
-maximum_expiration=300
-
-[333](endpoint-tpl)
-type=endpoint
-aors=333
-auth=333-auth
-transport=udp
-outbound_auth=333-auth
-context=internal
-accountcode=333
-subscribe_context=internal
-moh_suggest=default
-notify_early_inuse_ringing=True
-refer_blind_progress=True
-direct_media=yes
-force_rport=yes
-rtp_symmetric=yes
-rewrite_contact=yes
-dtmf_mode=rfc4733
-allow=ulaw,alaw,g722
-use_ptime=False
-callerid=01254661100
-
-[333-auth]
-type=auth
-auth_type=userpass
-username=333
-password=Cs3244EG*01
-realm=UVLink
-
-[333](aor-tpl)
-type=aor
-max_contacts=5
-qualify_timeout=8
-qualify_frequency=20
 authenticate_qualify=no
 default_expiration=360
 minimum_expiration=120
