--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,20 @@
-annotated-types==0.7.0
-anyio==3.7.1
-azure-storage-blob==12.19.0
-click==8.2.1
+# Core Framework
 fastapi==0.104.1
-greenlet==3.2.2
-h11==0.16.0
-httptools==0.6.4
-idna==3.10
-pydantic==2.5.0
-pydantic_core==2.14.1
-PyJWT==2.10.1
-PyMySQL==1.1.1
-python-dotenv==1.1.0
-python-multipart==0.0.6
-PyYAML==6.0.2
-sniffio==1.3.1
-SQLAlchemy==2.0.41
-starlette==0.27.0
-typing_extensions==4.13.2
 uvicorn==0.24.0
-uvloop==0.21.0
-watchfiles==1.0.5
-websockets==15.0.1
+pydantic==2.11.5
+pydantic-settings==2.9.1
+
+# Database
+SQLAlchemy==2.0.41
+PyMySQL==1.1.1
+
+# HTTP Clients
+aiohttp==3.12.7
+httpx==0.28.1
+requests==2.32.3
+
+# Authentication
+PyJWT==2.10.1
+
+# Environment
+python-dotenv==1.1.0
