FIX prov url and auth

--- a/local_test/pjsip.conf
+++ b/local_test/pjsip.conf
@@ -15,7 +15,7 @@ rewrite_contact=True
 dtmf_mode=rfc4733
 allow=ulaw,alaw,g722
 use_ptime=False
-transport=udp
+transport=tcp
 callerid=07717767740
 accountcode=201
 set_var=
