--- a/local_test/pjsip.conf
+++ b/local_test/pjsip.conf
@@ -147,3 +147,42 @@ authenticate_qualify=no
 default_expiration=360
 minimum_expiration=120
 maximum_expiration=300
+
+[204](endpoint-tpl)
+type=endpoint
+aors=204
+auth=204-auth
+transport=tcp
+outbound_auth=204-auth
+context=internal
+accountcode=204
+subscribe_context=internal
+moh_suggest=default
+notify_early_inuse_ringing=True
+refer_blind_progress=True
+direct_media=yes
+force_rport=yes
+rtp_symmetric=yes
+rewrite_contact=yes
+dtmf_mode=rfc4733
+allow=ulaw,alaw,g722
+use_ptime=False
+callerid=01254661100
+set_var=
+
+[204-auth]
+type=auth
+auth_type=userpass
+username=204
+password=Cs3244EG*01
+realm=UVLink
+
+[204](aor-tpl)
+type=aor
+max_contacts=5
+qualify_timeout=8
+qualify_frequency=20
+authenticate_qualify=no
+default_expiration=360
+minimum_expiration=120
+maximum_expiration=300
