fix prov issues

--- a/local_test/pjsip.conf
+++ b/local_test/pjsip.conf
@@ -54,7 +54,7 @@ rewrite_contact=True
 dtmf_mode=rfc4733
 allow=ulaw,alaw,g722
 use_ptime=False
-transport=tcp
+transport=tls
 callerid=07717767740
 accountcode=202
 set_var=
@@ -173,7 +173,7 @@ set_var=
 [204-auth]
 type=auth
 auth_type=userpass
-username=204
+username=201
 password=Cs3244EG*01
 realm=UVLink
 
