--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,53 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.7
+aiosignal==1.3.2
 annotated-types==0.7.0
 anyio==3.7.1
+attrs==25.3.0
+azure-core==1.34.0
 azure-storage-blob==12.19.0
+certifi==2025.4.26
+cffi==1.17.1
+charset-normalizer==3.4.2
 click==8.2.1
+cryptography==45.0.3
 fastapi==0.104.1
+frozenlist==1.6.0
 greenlet==3.2.2
 h11==0.16.0
+httpcore==1.0.9
 httptools==0.6.4
+httpx==0.28.1
 idna==3.10
-pydantic==2.5.0
-pydantic_core==2.14.1
+iniconfig==2.1.0
+isodate==0.7.2
+multidict==6.4.4
+packaging==25.0
+pluggy==1.6.0
+propcache==0.3.1
+pycparser==2.22
+pydantic==2.11.5
+pydantic-settings==2.9.1
+pydantic_core==2.33.2
+Pygments==2.19.1
 PyJWT==2.10.1
 PyMySQL==1.1.1
+pyst2==0.5.1
+pytest==8.4.0
+pytest-asyncio==1.0.0
 python-dotenv==1.1.0
 python-multipart==0.0.6
 PyYAML==6.0.2
+requests==2.32.3
+six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.41
 starlette==0.27.0
+typing-inspection==0.4.1
 typing_extensions==4.13.2
+urllib3==2.4.0
 uvicorn==0.24.0
 uvloop==0.21.0
 watchfiles==1.0.5
 websockets==15.0.1
+yarl==1.20.0
