fix pro and phone config files

--- a/local_test/pjsip.conf
+++ b/local_test/pjsip.conf
@@ -47,14 +47,14 @@ subscribe_context=internal
 moh_suggest=default
 notify_early_inuse_ringing=True
 refer_blind_progress=True
-direct_media=yes
+direct_media=no
 force_rport=True
 rtp_symmetric=True
 rewrite_contact=True
 dtmf_mode=rfc4733
-allow=ulaw,alaw,g722
+allow=ulaw,alaw
 use_ptime=False
-transport=tls
+transport=udp
 callerid=07717767740
 accountcode=202
 set_var=
