--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,21 @@
 aiohappyeyeballs==2.6.1
 aiohttp==3.12.7
 aiosignal==1.3.2
+alembic==1.16.1
 annotated-types==0.7.0
 anyio==3.7.1
+asgiref==3.8.1
 attrs==25.3.0
 azure-core==1.34.0
 azure-storage-blob==12.19.0
+bcrypt==4.3.0
 certifi==2025.4.26
 cffi==1.17.1
 charset-normalizer==3.4.2
 click==8.2.1
 cryptography==45.0.3
-fastapi==0.104.1
+ecdsa==0.19.1
+fastapi==0.100.1
 frozenlist==1.6.0
 greenlet==3.2.2
 h11==0.16.0
@@ -21,10 +25,15 @@ httpx==0.28.1
 idna==3.10
 iniconfig==2.1.0
 isodate==0.7.2
+Mako==1.3.10
+MarkupSafe==3.0.2
 multidict==6.4.4
 packaging==25.0
+passlib==1.7.4
 pluggy==1.6.0
 propcache==0.3.1
+psycopg2-binary==2.9.10
+pyasn1==0.6.1
 pycparser==2.22
 pydantic==2.11.5
 pydantic-settings==2.9.1
@@ -35,18 +44,20 @@ PyMySQL==1.1.1
 pyst2==0.5.1
 pytest==8.4.0
 pytest-asyncio==1.0.0
-python-dotenv==1.1.0
+python-dotenv==0.21.1
+python-jose==3.5.0
 python-multipart==0.0.6
 PyYAML==6.0.2
 requests==2.32.3
+rsa==4.9.1
 six==1.17.0
 sniffio==1.3.1
-SQLAlchemy==2.0.41
+SQLAlchemy==1.4.54
 starlette==0.27.0
 typing-inspection==0.4.1
 typing_extensions==4.13.2
 urllib3==2.4.0
-uvicorn==0.24.0
+uvicorn==0.15.0
 uvloop==0.21.0
 watchfiles==1.0.5
 websockets==15.0.1
